SF-2432 Fix quill editor double scroll bar

--- a/src/SIL.XForge.Scripture/ClientApp/src/_text.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/_text.scss
@@ -4,6 +4,7 @@
 
 quill-editor {
   height: 100%;
+  display: unset !important;
   > .ql-container {
     letter-spacing: 0.03125em;
     > .ql-editor {
